--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Webpack + React</title>
   </head>
-  <body style="height: 100%; background-color: #efefef; margin: 0px" >
+  <body style="height: 100%; margin: 0px" >
     <div id="react_container">
       <script src="app.js"></script>
     </div>
